﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-12-27 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, libraries/check_user_privileges.lib.php: 
      - reenable a non-privileged user to change his password
      - display the Reload MySQL link only if user has proper rights
    * Documentation.html: bug #1389582, unclosed code tag,
      thanks to Isaac Bennetch

2005-12-25 Michal Čihař  <michal@cihar.com>
    * libraries/import.lib.php, libraries/import/sql.php: Handle correctly
      dumps with commented out commands (eg. from mysqldump).

2005-12-22 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, libraries/common.lib.php: bug #1381856,
      Cannot edit a table having 40 columns
    * libraries/common.lib.php: bug #1388116, cannot pass TRUE by reference 
      to PMA_setCookie, thanks to Isaac Bennetch
    * libraries/tbl_replace_fields.inc.php: recent fix introduced a bug:
      cannot change a value for a nullable field

2005-12-21 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat
    * lang/hungarian update, thanks to Mihály Mészáros <necronix@freemail.hu>
    * tbl_properties_operations.php, libraries/tbl_properties.inc.php:
      bug #1349262, mismatch between PMA and MySQL about Storage Engine
      and table type
    * server_status.php, lang/*: bug #1348249, add a warning hint about
      the possibility of some counters being overrun (stats from MySQL server)

2005-12-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: does not return to correct page after
      the creation of a bookmark
    * libraries/display_create_table.lib.php: bug #1376314, detection of
      privileges to create a table (fix for MySQL 4.0.x case)
    * tbl_change.php, tbl_replace.php, libraries/tbl_replace_fields.inc.php:
      bug #1385974, cannot un-null a value

2005-12-17 Sebastian Mendel <cybot_tm@users.sourceforge.net>