@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-12-30 Marc Delisle  <lem9@users.sourceforge.net>
+    * server_databases.php: bug #1388135, IE and dropping databases
+
 2005-12-27 Marc Delisle  <lem9@users.sourceforge.net>
     * main.php, libraries/check_user_privileges.lib.php: 
       - reenable a non-privileged user to change his password
